cmake_minimum_required(VERSION 3.10)

# Set the project name
project(Ejemplo1)

# Add the executable for CppOperators.cpp
add_executable(Ejemplo ejemplo.c)

# Add the executable for ConttrolStructures.cpp
add_executable(CustomDT customDatatype.cpp)

# Add the executable for CppOperators.cpp
add_executable(firsProgram firstProg.c++)

# Add the executable for functions.cpp
add_executable(Scope scope.cpp)