cmake_minimum_required(VERSION 3.10)

# Set the project name
project(Ejemplo2)

# Add the executable for ConttrolStructures.cpp
add_executable(ContStr ControlStructures.cpp)

# Add the executable for CppOperators.cpp
add_executable(CppOperators ejemplo2.cpp)

# Add the executable for functions.cpp
add_executable(Functions functions.cpp)