cmake_minimum_required(VERSION 3.10)

# Set the project name
project(Ejemplo5)

include_directories(include)

# Add the executable for ConttrolStructures.cpp
add_executable(cubeClass Example1.cpp)

# Add the executable for ConttrolStructures.cpp
add_executable(Complex Complex.cpp)

add_executable(Vehicle Vehicle.cpp)